c2platform.tomcat refactored: single instance, https, catalina_opts & more flexibility configuring server.xml